[package]
name = "amman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dialog = "0.3.0"
encrypt = { version = "0.1.0", path = "../encrypt" }
magic-crypt = "3.1.13"
nix = { version = "0.27.1", features = ["user"] }
